Fixes alignment issues

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -168,6 +168,7 @@ header
     width 233px
   textarea
     float right
+    padding 4px 2px
     overflow-y hidden
     width 233px
     height 159.47px
